--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Andrew's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: #08d9d6;">
   <table>
     <tr>
       <td><img src="andrew.jpg" alt="Andrew Shannon"></td>
       <td>
-        <h1><a href="https://www.facebook.com/TruDru2" target="_blank">Andrew Shannon</a></h1>
+        <h1><a href="https://www.linkedin.com/in/andrew-shannon-59a494b9/" target="_blank">Andrew Shannon</a></h1>
         <p><em>Web Developer And CEO of Techaboo Solutions.</em></p>
-        <p>I am IOS and Web Developer. I love coffee and brew my own beer.</p>
+        <p>I am IOS and Web Developer. I have over 15 years of IT Support and Management Experience.</p>
       </td>
     </tr>
   </table>
@@ -25,49 +25,131 @@
   <ul>
     <li><a
         href="https://info.lincolntech-usa.com/campus/nashville-tn/?comm=844-215-4403&utm_source=google&utm_medium=cpc&utm_campaign=NADC+school+names+geo+TN&utm_adgroup=NADC&utm_term=nashville%20auto%20diesel%20school&click=sem&infinity=ict2~net~gaw~ar~263686916783~kw~nashville%20auto%20diesel%20school~mt~e~cmp~NADC+school+names+geo+TN~ag~NADC&gclid=Cj0KCQiAiZPvBRDZARIsAORkq7eobme0SxGqpTne1_yZ9_S-M-5F03DAoC52WGS3AZYjepHFzOi4-HIaAgNIEALw_wcB&gclsrc=aw.ds"
-        target="_blank">I attended Nashville Auto Diesel</a></li>
+        target="_blank">Nashville Auto Diesel College</a></li>
     <li><a href="https://www.axelos.com/certifications/itil-certifications" target="_blank">ITIL V3 Foundation Certified</a></li>
     <li><a href="https://www.thinkhdi.com/education/courses/hdi-customer-service-representative.aspx" target="_blank">HDR CSR Certified</a></li>
-    <li>I have over 15 years on the job experience.</li>
+    <li><a href="https://www.wcschools.com/lhs">Lebanon High School</a></li>
+    <li><a href="https://www.w3schools.com/html/">w3School</a></li>
+    <li><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Udemy Bootcamp</a></li>
   </ul>
 
 
-<hr>
-<h3>Work Experience</h3>
-<p><em>VasoHealthcare Inc.</em></p>
-<p><em>ImageQuest</em></p>
-<hr>
-<h3>Skills</h3>
-<table border="1px">
-  <tr>
-    <td>
+  <hr>
+  <h3>Work Experience</h3>
+  <p><em>VasoHealthcare Inc.</em></p>
+  <ul>
+    <p>Work Duties</p>
+    <li>Project Management</li>
+    <li>O-365 Administrator</li>
+    <li>VMs Server Administrator</li>
+    <li>MSP Manager</li>
+    <li>Azure Administrator</li>
+  </ul>
+  <p><em>ImageQuest</em></p>
+  <ul>
+    <p>Work Duties</p>
+    <li>Daas Administrator</li>
+    <li>VMs Support Technician</li>
+    <li>Active Directoy And Domain Management</li>
+    <li>Group Policy Administrator</li>
+    <li>Level Threee Tech Support</li>
+  </ul>
+  <hr>
+  <h3>Skills</h3>
+  <table border="1px">
+    <tr>
+      <td>
 
-      <label for="CSS">CSS:</label>
+        <label for="CSS">CSS:</label>
 
-      <meter id="CSS" min="0" max="100" low="33" high="66" optimum="80" value="70">
-        at 50/100
-      </meter></td>
-    <td><label for="Troubleshooting">Troubleshooting:</label>
+        <meter id="CSS" min="0" max="100" low="33" high="66" optimum="80" value="70">
+          at 50/100
+        </meter></td>
+      <td><label for="Troubleshooting">Troubleshooting:</label>
 
-      <meter id="fuel" min="0" max="100" low="33" high="66" optimum="80" value="100">
-        at 50/100
-      </meter></td>
-  </tr>
-  <tr>
-    <td><label for="HTML">HTML:</label>
+        <meter id="fuel" min="0" max="100" low="33" high="66" optimum="80" value="100">
+          at 50/100
+        </meter></td>
+    </tr>
+    <tr>
+      <td><label for="HTML">HTML:</label>
 
-      <meter id="HTML" min="0" max="100" low="33" high="66" optimum="80" value="100">
-        at 50/100
-      </meter></td>
-    <td><label for="JavaScripting">JavaScripting:</label>
+        <meter id="HTML" min="0" max="100" low="33" high="66" optimum="80" value="100">
+          at 50/100
+        </meter></td>
+      <td><label for="JavaScripting">JavaScripting:</label>
 
-      <meter id="fuel" min="0" max="100" low="33" high="66" optimum="80" value="50">
-        at 50/100
-      </meter></td>
-  </tr>
-</table>
-<a href="MyHobbies.html" target="_blank">My Hoobies</a>
-<br>
-<a href="contact.html" target="_blank">Contact Me</a>
+        <meter id="fuel" min="0" max="100" low="33" high="66" optimum="80" value="50">
+          at 50/100
+        </meter></td>
+    </tr>
+    <tr>
+      <td><label for="Azure">Azure:</label>
+
+        <meter id="HTML" min="0" max="100" low="33" high="66" optimum="80" value="100">
+          at 50/100
+        </meter></td>
+      <td><label for="Active Directory">Active Directory:</label>
+
+        <meter id="fuel" min="0" max="100" low="33" high="66" optimum="80" value="100">
+          at 50/100
+        </meter></td>
+    </tr>
+    <tr>
+      <td><label for="O-365">O-365:</label>
+
+        <meter id="HTML" min="0" max="100" low="33" high="66" optimum="80" value="100">
+          at 50/100
+        </meter></td>
+      <td><label for="Veeam">Veeam:</label>
+
+        <meter id="fuel" min="0" max="100" low="33" high="66" optimum="80" value="80">
+          at 50/100
+        </meter></td>
+    </tr>
+    <tr>
+      <td><label for="Powershell">Powershell</label>
+
+        <meter id="HTML" min="0" max="100" low="33" high="66" optimum="80" value="100">
+          at 50/100
+        </meter></td>
+      <td><label for="Windows 10">Windows 10:</label>
+
+        <meter id="fuel" min="0" max="100" low="33" high="66" optimum="80" value="100">
+          at 50/100
+        </meter></td>
+    </tr>
+    <tr>
+      <td><label for="Apache Tomcat">Tomcat Apache:</label>
+
+        <meter id="HTML" min="0" max="100" low="33" high="66" optimum="80" value="100">
+          at 50/100
+        </meter></td>
+      <td><label for="IIS Web Server">IIS Web Server:</label>
+
+        <meter id="fuel" min="0" max="100" low="33" high="66" optimum="80" value="100">
+          at 50/100
+        </meter></td>
+    </tr>
+    <tr>
+      <td><label for="SSL Certificate">SSL Certificate:</label>
+
+        <meter id="HTML" min="0" max="100" low="33" high="66" optimum="80" value="100">
+          at 50/100
+        </meter></td>
+      <td><label for="OpenSSL">OpenSSL:</label>
+
+        <meter id="fuel" min="0" max="100" low="33" high="66" optimum="80" value="100">
+          at 50/100
+        </meter></td>
+    </tr>
+
+  </table>
+
+  <a href="MyHobbies.html" target="_blank">My Hoobies</a>
+  <br>
+  <a href="contact.html" target="_blank">Contact Me</a>
+
 </body>
+
 </html>
