--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 
 <body>
   <div class="top">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Andrew.</h1>
     <h2>
       <p>a <span class="pro">pro</span>grammer.</p></span>
     </h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+    <img src="mountain.png" alt="mountain-img">
 
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img class="Photo" src="https://techaboo.github.io/cv/andrew.jpg" alt="Andrew Shannon">
+      <img class="Photo" src="andrew.jpg" alt="Andrew Shannon">
       <h2>Hello.</h2>
       <p>I am an Operations and Project Manager. I'm the founder of Techaboo Solutions. I 💓 turning a dream into reality.</p>
     </div>
