--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="profile">
       <img class="Photo" src="andrew.jpg" alt="Andrew Shannon">
       <h2>Hello.</h2>
-      <p>I am an Operations and Project Manager. I'm the founder of Techaboo Solutions. I 💓 turning a dream into reality.</p>
+      <p>I am an Operations and Project Management. I'm the founder of Techaboo Solutions. I 💓 turning a dream into reality.</p>
     </div>
     <hr>
     <div class="skills">
