--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Andrew.</h1>
     <h2>
-      <p>a <span class="pro">pro</span>grammer.</p></span>
+      <p>a <span class="pro">IT</span>Consultant.</p></span>
     </h2>
     <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
     <img src="mountain.png" alt="mountain-img">
@@ -27,7 +27,9 @@
     <div class="profile">
       <img class="Photo" src="andrew.jpg" alt="Andrew Shannon">
       <h2>Hello.</h2>
-      <p>I am an Operations and Project Manager. I'm the founder of Techaboo Solutions. I 💓 turning a dream into reality.</p>
+      <p>
+I have been working in IT for over twenty years. The secret to remaining indispensable is to be consistent with learning and research. 
+. I'm the founder of Techaboo Solutions. I 💓 turning a dream into reality.</p>
     </div>
     <hr>
     <div class="skills">
@@ -36,7 +38,9 @@
         <img class="ITIL" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR9xEbPLTKh67krqMDvvbj0GVhrcMVqIIcl6Etpf5HXyFq-jAf9" alt="Skills">
         <h3>Design & Development</h3>
 
-        <p>I started learning about computers and coding when I was 10 years old. I have a lot of real on the job experience with building websites. </p>
+        <p>
+I started learning about computers and coding when I was ten years old. I have confirmed on-the-job experience with System Administration and VMware support. 
+ </p>
       </div>
       <div class="skill-row">
         <img class="HDR" src="https://thinkhdi.files.wordpress.com/2010/09/hdi-certified.jpg" alt="">
