--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Andrew.</h1>
     <h2>
-      <p>a <span class="pro">IT</span>Consultant.</p></span>
+      <p>an <span class="pro">IT</span>Consultant.</p></span>
     </h2>
     <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
     <img src="mountain.png" alt="mountain-img">
