--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <img class="Photo" src="andrew.jpg" alt="Andrew Shannon">
       <h2>Hello.</h2>
       <p>
-I have been working in IT for over twenty years. The secret to remaining indispensable is to be consistent with learning and research. 
-. I'm the founder of Techaboo Solutions. I 💓 turning a dream into reality.</p>
+I have been working in IT for over twenty years. The secret to remaining indispensable is to be consistent with learning and research.
+        I'm the founder of Techaboo Solutions. I 💓 turning a dream into reality.</p>
     </div>
     <hr>
     <div class="skills">
