--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ I started learning about computers and coding when I was ten years old. I have c
       <h3>If you have a vision that you want transformed into reality.</h3>
       <p>Let's talk about the next step in order to make your dream your reality. Please contact me for serious inquiries?</p>
 
-      <a class="btn" href="mailto:techaboo@gmail.com?subject= Website Development">CONTACT ME</a>
+      <a class="btn" href="mailto:techaboo@gmail.com?subject= I.T. Consultant">CONTACT ME</a>
     </div>
   </div>
 
