--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <title>Andrew Shannon</title>
@@ -8,7 +7,6 @@
   <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montez|Montserrat|Sacramento&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -16,11 +14,10 @@
     <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Andrew.</h1>
     <h2>
-      <p>an <span class="pro">IT</span>Consultant</p></span>
+      <p>a <span class="pro">System</span>Administrator</p>
     </h2>
     <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
     <img src="mountain.png" alt="mountain-img">
-
   </div>
 
   <div class="middle-container">
@@ -28,46 +25,40 @@
       <img class="Photo" src="andrew.jpg" alt="Andrew Shannon">
       <h2>Hello.</h2>
       <p>
-I have been working in IT for over twenty years. The secret to remaining indispensable is to be consistent with learning and research.
-        I'm the founder of Techaboo Solutions. I 💓 turning a dream into reality.</p>
+I've been navigating the intricacies of system administration for over two decades. Staying ahead in this field means continually evolving with technology and understanding complex network environments. As the lead System Administrator at Techaboo Solutions, I'm passionate about designing robust system architectures and ensuring seamless IT operations.</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="ITIL" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR9xEbPLTKh67krqMDvvbj0GVhrcMVqIIcl6Etpf5HXyFq-jAf9" alt="Skills">
-        <h3>Design & Development</h3>
+        <h3>System Architecture & Network Management</h3>
 
         <p>
-I started learning about computers and coding when I was ten years old. I have confirmed on-the-job experience with System Administration and VMware support. 
- </p>
+From early childhood, I was drawn to the complexities of computer systems. My expertise includes advanced knowledge in network infrastructure, cybersecurity measures, and cloud-based solutions. </p>
       </div>
       <div class="skill-row">
         <img class="HDR" src="https://thinkhdi.files.wordpress.com/2010/09/hdi-certified.jpg" alt="">
-        <h3>HDI CSR Certified</h3>
+        <h3>ITIL & HDI Certified</h3>
 
-        <p>I earned my HDI CSR certification. This proves that I understand the best practices on how to deal with customers.</p>
+        <p>With certifications in ITIL and HDI, I bring industry-standard practices to managing IT services and customer support within our organization.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>If you have a vision that you want transformed into reality.</h3>
-      <p>Let's talk about the next step in order to make your dream your reality. Please contact me for serious inquiries?</p>
+      <h3>Transforming Vision into System Solutions.</h3>
+      <p>Ready to elevate your IT infrastructure? Let's discuss how we can turn your vision into an effective and efficient reality. For serious inquiries, please reach out to me.</p>
 
-      <a class="btn" href="mailto:techaboo@gmail.com?subject= I.T. Consultant">CONTACT ME</a>
+      <a class="btn" href="mailto:techaboo@gmail.com?subject= System Administrator Inquiry">CONTACT ME</a>
     </div>
   </div>
-
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/andrew-shannon-59a494b9/" target="_blank">LinkedIn</a>
     <a class="footer-link" href="https://techaboo.github.io/cv/" target="_blank">My Website</a>
-    <div class="copyright" <p>© 2018 Andrew Shannon.</p>
+    <div class="copyright"><p>Â© 2018 Andrew Shannon.</p>
     </div>
   </div>
-
-
 </body>
-
 </html>
