--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ From early childhood, I was drawn to the complexities of computer systems. My ex
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/andrew-shannon-59a494b9/" target="_blank">LinkedIn</a>
-    <a class="footer-link" href="https://www.techaboo.net/experience.html" target="_blank">My Experience</a>
+    <a class="footer-link" href="https://techaboo.github.io/cv/experience.html" target="_blank">My Experience</a>
     <div class="copyright"><p> © 2018 Andrew Shannon.</p>
     </div>
   </div>
