--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
     </div>
 
     <!-- JavaScript for Carousel -->
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
