--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 Contact me today and let's discuss how I can help you achieve your IT goals.
 			    <br><br>
 				 <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/andrew-shannon-59a494b9/" target="_blank">LinkedIn</a> |
+    <a class="footer-link" href="www.linkedin.com/in/
+andrew-shannon84/" target="_blank">LinkedIn</a> |
     <a class="footer-link" href="experience.html" target="_blank">My Experience</a>
     
             </p>
