--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			    <br><br>
 				 <div class="bottom-container">
     <a class="footer-link" href="www.linkedin.com/in/
-andrew-shannon84/" target="_blank">LinkedIn</a> |
+andrew-shannon84" target="_blank">LinkedIn</a> |
     <a class="footer-link" href="experience.html" target="_blank">My Experience</a>
     
             </p>
