--- a/experience.html
+++ b/experience.html
@@ -53,7 +53,7 @@ Crafted SLA protocols and automated ticketing processes, improving IT service de
 <section id="experience">
             
             <div class="job">
-                <h3>Level 3 Helpdesk Support<span>ImageQuest | September 2018</span></h3>
+                <h3>Level 3 Helpdesk Support</h3><span>ImageQuest | September 2018</span></h3>
                 <ul>
 <li>Delivered comprehensive onsite and remote support, specializing in Microsoft Office Suite, ensuring optimal software performance and user proficiency.</li>
 <li>Configured and maintained Meraki firewall systems, providing robust network security and operational support.</li>
