--- a/experience.html
+++ b/experience.html
@@ -28,7 +28,7 @@
         <section id="experience">
             <h2>Work Experience</h2>
             <div class="job">
-                <h3>System Administrator</h3><span>VasoHealthcare | September 2018 - Present</span></h3>
+                <h3>System Administrator</h3><span>VasoHealthcare | September 2018 - Present</span>
                 <ul>
 <li>Embarked on my career within the high-level help desk, swiftly ascending to System Administrator, demonstrating substantial growth in technical acumen and leadership capabilities.</li>
 <li>Championed the strategic enhancement of IT infrastructure, integrating pivotal technologies such as Office 365, Azure Cloud Security, and Microsoft MDM, alongside pioneering business technology integrations.</li>
