--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 Contact me today to discuss how I can help you achieve your IT goals.
 			    <br><br>
 				 <div class="bottom-container">
-       <a target="_blank" href="https://www.linkedin.com/in/andrew-shannon84">LinkedIn</a> |
+       <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="andrew-shannon84" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/andrew-shannon84?trk=profile-badge">Andrew S.</a></div>
+               |
        <a target="_blank" href="experience.html">My Experience</a>
     
             </p>
