--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
 
     <!-- JavaScript for Carousel -->
     <script src="script2.js"></script>
+	<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 </html>
