--- a/index.html
+++ b/index.html
@@ -33,29 +33,30 @@
                 <br><br>
                 I am always eager to learn new technologies and skills to keep up with the changing IT landscape. I am also a good communicator and team player who can work well with clients and colleagues. Whether you need a System Administrator for a short-term project or a long-term partnership, I am confident that I can meet your expectations and exceed them.
                 <br><br>
-                Contact me today to discuss how I can help you achieve your IT goals
+                Please contact me today to discuss how I can help you achieve your IT goals.</p>
+			    <br><br>
+                <div class="mt-4 flex items-center justify-center">
+                    <a class="badge-base LI-profile-badge flex items-center" href="https://www.linkedin.com/in/andrew-shannon84?trk=profile-badge" target="_blank">
+                        Andrew Shannon
+                    </a>
+                    <span class="separator" style="margin: 0 8px;">|</span>
+                    <a target="_blank" href="experience.html" class="flex items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-briefcase" viewBox="0 0 16 16">
+                            <path d="M6.5 0A1.5 1.5 0 0 0 5 1.5V2H1.5A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2H11v-.5A1.5 1.5 0 0 0 9.5 0h-3zM6 1.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5V2H6v-.5zM1.5 3A.5.5 0 0 1 2 2.5h12a.5.5 0 0 1 .5.5V4H1v-.5zm-.5 2.5v8a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-8H1z"/>
+                        </svg>
+                        My Experience
+                    </a>
+                </div>
             </p>
-           <div class="mt-4 flex items-center justify-center">
-    <a class="badge-base LI-profile-badge flex items-center" href="https://www.linkedin.com/in/andrew-shannon84?trk=profile-badge" target="_blank">
-        Andrew Shannon
-    </a>
-    <span class="separator" style="margin: 0 8px;">|</span>
-    <a target="_blank" href="experience.html" class="flex items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-briefcase" viewBox="0 0 16 16">
-            <path d="M6.5 0A1.5 1.5 0 0 0 5 1.5V2H1.5A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2H11v-.5A1.5 1.5 0 0 0 9.5 0h-3zM6 1.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5V2H6v-.5zM1.5 3A.5.5 0 0 1 2 2.5h12a.5.5 0 0 1 .5.5V4H1v-.5zm-.5 2.5v8a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-8H1z"/>
-        </svg>
-        My Experience
-    </a>
-</div>
         </div>
-       
-    </section>
+    </div>
+</section>
 
-    <footer class="bg-gray-800 text-white p-4 text-center fixed bottom-0 w-full">
-        © 2024 System Administrator Expertise
-    </footer>
+<footer class="bg-gray-800 text-white p-4 text-center fixed bottom-0 w-full">
+    © 2024 System Administrator Expertise
+</footer>
 
-    <script src="script2.js"></script>
-    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+<script src="script2.js"></script>
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 </html>
