--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 				 <div class="bottom-container">
                
        <a target="_blank" href="experience.html">My Experience</a>
+       <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     
             </p>
         </div>
