--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 Contact me today to discuss how I can help you achieve your IT goals.
 			    <br><br>
 				 <div class="bottom-container">
-        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="andrew-shannon84" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/andrew-shannon84?trk=profile-badge">Andrew S.</a></div>
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="andrew-shannon84" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/andrew-shannon84?trk=profile-badge"></a></div>
                      
        <a target="_blank" href="experience.html">My Experience</a>
       
