--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="andrew-shannon84" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/andrew-shannon84?trk=profile-badge"></a></div>
                      
        
-   <a href="experience.html" class="Bios">Portlio</a>
+   <div><a href="experience.html" class="Bios">Portlio</a></div>
 
 
 
