Updated <p> on index.html

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <div class="text-center mb-10">
             <h2 class="text-4xl font-bold text-gray-800 mb-4">Professional System Administration Services</h2>
             <p class="text-md text-gray-600">
-                Are you looking for a reliable, skilled and experienced System Administrator to handle your IT needs? If so, you have come to the right place. I am a System Administrator with 17 years of experience in managing, maintaining and troubleshooting various systems and networks.
+                I am a System Administrator with 17 years of experience in managing, maintaining and troubleshooting various systems and networks.
                 <br><br>
                 I have worked with different platforms like Windows, Linux, MacOS, AWS, Azure, etc. I have also handled various tasks, such as server installation and configuration, backup and recovery, security and performance optimization, user support and training, etc. I have a proven track record of delivering high-quality results in a timely and cost-effective manner.
                 <br><br>
-                I am always eager to learn new technologies and skills to keep up with the changing IT landscape. I am also a good communicator and team player who can work well with clients and colleagues. Whether you need a System Administrator for a short-term project or a long-term partnership, I am confident that I can meet your expectations and exceed them.
+                I am always eager to learn new technologies and skills to keep up with the changing IT landscape. I am also a good communicator and team player who can work well with clients and colleagues. I am confident that I can meet your expectations and exceed them.
                 <br><br>
                 Contact me today to discuss how I can help you achieve your IT goals.
 			    <br><br>
