--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="text-center mb-10">
             <h2 class="text-4xl font-bold text-gray-800 mb-4">Professional System Administration Services</h2>
             <p class="text-md text-gray-600">
-                I am a System Administrator with 17 years of experience in managing, maintaining and troubleshooting various systems and networks.
+                I am a System Administrator with 17 years of experience managing, maintaining, and troubleshooting various systems and networks.
                 <br><br>
                 I have worked with different platforms like Windows, Linux, MacOS, AWS, Azure, etc. I have also handled various tasks, such as server installation and configuration, backup and recovery, security and performance optimization, user support and training, etc. I have a proven track record of delivering high-quality results in a timely and cost-effective manner.
                 <br><br>
@@ -60,7 +60,7 @@
     
 </section>
         <footer class="bg-gray-800 text-white p-4 text-center fixed bottom-0 w-full">
-            © 2024 System Administrator Expertise
+            © 2024 Andrew Shannon
         </footer>
     
 
