--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <section class="bg-white py-8 px-4">
     <div class="max-w-6xl mx-auto">
         <div class="text-center mb-10">
-            <h2 class="text-4xl font-bold text-gray-800 mb-4">Professional System Administration Services</h2>
+            <h2 class="text-4xl font-bold text-gray-800 mb-4">Andrew Shannon's Professional Portfolio</h2>
             <p class="text-md text-gray-600">
                 I am a System Administrator with 17 years of experience managing, maintaining, and troubleshooting various systems and networks.
                 <br><br>
@@ -43,7 +43,7 @@
                 <br><br>
                 I am always eager to learn new technologies and skills to keep up with the changing IT landscape. I am also a good communicator and team player who can work well with clients and colleagues. I am confident that I can meet your expectations and exceed them.
                 <br><br>
-                Contact me today to discuss how I can help you achieve your IT goals.
+                Click the resume button below or check out my Linkedin profile if you are interested.
 			    <br><br>
 				 <div class="bottom-container">
         <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="andrew-shannon84" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/andrew-shannon84?trk=profile-badge"></a></div>
